编译原理实践/shixi3/src/Semantics/Semantics.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Semantics.java */
package Semantics;

import util.*;import java.io.FileOutputStream;
import java.io.IOException;
import java.util.Hashtable;import java.util.ArrayList;import java.io.FileInputStream;import java.io.FileNotFoundException;
public class Semantics/*@bgen(jjtree)*/implements SemanticsTreeConstants, SemanticsConstants {/*@bgen(jjtree)*/
  protected JJTSemanticsState jjtree = new JJTSemanticsState();public QTList qtList = new QTList();
        public int loop = 0;
        protected SimpleCharStream input_stream;

        public void printQTTable(FileOutputStream out){
                qtList.printQTTable(out);
        }
        public static void main(String[] args) throws ParseException, IOException {
            String dir = "./src/testFile/";
            FileInputStream in = new FileInputStream(dir.concat("test.txt"));
            FileOutputStream out1 = new FileOutputStream(dir.concat("\u7487\u5d86\u7876\u9352\u55d8\u703d.txt"));
            FileOutputStream out2 = new FileOutputStream(dir.concat("\u7487\ue15f\u7876\u9352\u55d8\u703d.txt"));
            FileOutputStream out3 = new FileOutputStream(dir.concat("\u7487\ue15d\u7b9f\u9352\u55d8\u703d.txt"));

        try
        {//词法分析
            System.out.println("\u7487\u5d86\u7876\u9352\u55d8\u703d\u5bee\ufffd\u6fee\ufffd");
            SimpleCharStream scs = new SimpleCharStream(in);
            SemanticsTokenManager tm = new SemanticsTokenManager(scs);
            Token t = tm.getNextToken();
                while(t.kind != 0) {
                    String line = "<" + t.kind + "," + t.image + ">\n";
                    out1.write(line.getBytes());
                    //System.out.println("<" + t.kind + "," + t.image + ">");
                    t = tm.getNextToken();
                }
                System.out.println("\u7487\u5d86\u7876\u9352\u55d8\u703d\u7f01\u64b4\u6f6b");
                //语法分析
          in.close();
          FileInputStream inn = new FileInputStream(dir.concat("test.txt"));
          Semantics parser = new Semantics(inn);
          System.out.println("\u7487\ue15f\u7876\u9352\u55d8\u703d\u5bee\ufffd\u6fee\ufffd");
          SimpleNode n = parser.Start();
          n.dump("=",out2);
          System.out.println("\u7487\ue15f\u7876\u9352\u55d8\u703d\u7f01\u64b4\u6f6b");
          ErrorInfo.printErrorInfo();
          //语义分析
          System.out.println("\u7487\ue15d\u7b9f\u9352\u55d8\u703d\u5bee\ufffd\u6fee\ufffd");
          parser.printQTTable(out3);
          System.out.println("\u7487\ue15d\u7b9f\u9352\u55d8\u703d\u7f01\u64b4\u6f6b");
          System.out.println("Thank you.");
        }
        catch (Exception e)
        {
          System.out.println("Oops.");
          System.out.println(e.getMessage());
        }
                out1.close();
                out2.close();
                out3.close();
  }

  final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Program();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Program() throws ParseException {
 /*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Type();
      Identifier();
      jj_consume_token(SLBRACKET);
      jj_consume_token(SRBRACKET);
      jj_consume_token(LLBRACKET);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case INT:
        case DO:
        case WHILE:
        case VOID:
        case DOUBLE:
        case FLOAT:
        case BREAK:
        case CONTINUE:
        case SWITCH:
        case FOR:
        case SELFADD:
        case SELFSUB:
        case LLBRACKET:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        SentenceBlock();
      }
      jj_consume_token(LRBRACKET);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public int SentenceBlock() throws ParseException {
 /*@bgen(jjtree) SentenceBlock */
 SimpleNode jjtn000 = new SimpleNode(JJTSENTENCEBLOCK);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);int index = 0;
int ans = 0;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case INT:
      case DO:
      case WHILE:
      case VOID:
      case DOUBLE:
      case FLOAT:
      case BREAK:
      case CONTINUE:
      case SWITCH:
      case FOR:
      case SELFADD:
      case SELFSUB:
      case IDENTIFIER:
        index = Sentence();
                         jjtree.closeNodeScope(jjtn000, true);
                         jjtc000 = false;
                        {if (true) return index;}
        break;
      case LLBRACKET:
        jj_consume_token(LLBRACKET);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IF:
          case INT:
          case DO:
          case WHILE:
          case VOID:
          case DOUBLE:
          case FLOAT:
          case BREAK:
          case CONTINUE:
          case SWITCH:
          case FOR:
          case SELFADD:
          case SELFSUB:
          case LLBRACKET:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_2;
          }
          index = SentenceBlock();
                                 if (index != 0 && ans == 0) ans = index;
        }
        jj_consume_token(LRBRACKET);
                                                                                   jjtree.closeNodeScope(jjtn000, true);
                                                                                   jjtc000 = false;
                                                                                  {if (true) return ans;}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public int Sentence() throws ParseException {
 /*@bgen(jjtree) Sentence */
 SimpleNode jjtn000 = new SimpleNode(JJTSENTENCE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BREAK:
        t = jj_consume_token(BREAK);
        jj_consume_token(SEMI);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        if (loop <= 0){
            new ErrorInfo(ErrorInfo.dont_shoule_appear,jj_input_stream.getEndLine(),jj_input_stream.getEndColumn(),t.image);
        }
        loop -= 1;
        qtList.addQTInfo(new QTInfo("j","_","_","s"));
        {if (true) return QTInfo.size;}
        break;
      case CONTINUE:
        t = jj_consume_token(CONTINUE);
        jj_consume_token(SEMI);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        if (loop <= 0){
            new ErrorInfo(ErrorInfo.dont_shoule_appear,jj_input_stream.getEndLine(),jj_input_stream.getEndColumn(),t.image);
        }
        qtList.addQTInfo(new QTInfo("j","_","_","s"));
        {if (true) return -QTInfo.size;}
        break;
      case INT:
      case VOID:
      case DOUBLE:
      case FLOAT:
      case SELFADD:
      case SELFSUB:
      case IDENTIFIER:
        SequenceSentence();
                              jjtree.closeNodeScope(jjtn000, true);
                              jjtc000 = false;
                             {if (true) return 0;}
        break;
      case IF:
      case SWITCH:
        ConditionSentence();
                               jjtree.closeNodeScope(jjtn000, true);
                               jjtc000 = false;
                              {if (true) return 0;}
        break;
      case DO:
      case WHILE:
      case FOR:
        LoopSentence();
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
                         {if (true) return 0;}
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void SequenceSentence() throws ParseException {
 /*@bgen(jjtree) SequenceSentence */
  SimpleNode jjtn000 = new SimpleNode(JJTSEQUENCESENTENCE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case VOID:
      case DOUBLE:
      case FLOAT:
        StatementSentence();
        break;
      case SELFADD:
      case SELFSUB:
      case IDENTIFIER:
        AssignmentSentence(false);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(SEMI);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public void StatementSentence() throws ParseException {
 /*@bgen(jjtree) StatementSentence */
 SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENTSENTENCE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);String ch = null;
String type = null;
    try {
      type = Type();
      if (jj_2_1(2)) {
        ch = AssignmentSentence(true);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          ch = Identifier();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
        if (!(OptionTable.ot.containsKey(ch)))
            OptionTable.ot.put(ch,type);
        else
            new ErrorInfo(ErrorInfo.variable_duplicate_declaration,jj_input_stream.getEndLine(),jj_input_stream.getEndColumn(),ch);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        if (jj_2_2(2)) {
          ch = AssignmentSentence(true);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
            ch = Identifier();
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
             if (!(OptionTable.ot.containsKey(ch)))
                 OptionTable.ot.put(ch,type);
             else
                 new ErrorInfo(ErrorInfo.variable_duplicate_declaration,jj_input_stream.getEndLine(),jj_input_stream.getEndColumn(),ch);
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  final public String Type() throws ParseException {
 /*@bgen(jjtree) Type */
 SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token type = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        type = jj_consume_token(INT);
        break;
      case DOUBLE:
        type = jj_consume_token(DOUBLE);
        break;
      case VOID:
        type = jj_consume_token(VOID);
        break;
      case FLOAT:
        type = jj_consume_token(FLOAT);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     {if (true) return type.image;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }
